--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -16,6 +16,7 @@
 		<spring-version>4.3.18.RELEASE</spring-version>
 		<hibernate-version>5.2.7.Final</hibernate-version>
 		<jackson-version>2.8.7</jackson-version>
+		<javaee.version>7.0</javaee.version>
 	</properties>
 
 	<dependencies>
@@ -26,9 +27,18 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- JAVAX-API -->
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>${javaee.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- SPRING -->
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->		
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -43,6 +53,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
+			<version>${spring-version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
 			<version>${spring-version}</version>
 		</dependency>
 
@@ -98,6 +114,23 @@
 			<version>1.7.24</version>
 		</dependency>
 
+		<!-- Validation -->
+		<dependency>
+		<groupId>javax.validation</groupId>
+		<artifactId>validation-api</artifactId>
+		<version>1.1.0.Final</version>
+		</dependency>
+
+		<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-validator</artifactId>
+		<version>5.4.1.Final</version>
+		</dependency>
+		
+		
+		
+		
+		
 	</dependencies>
 
 	<build>
